force-app/main/default/objects/MHQ__c/MHQ__c.object-meta.xml
<CustomObject>
    <label>MHQ</label>
    <nameField>
        <displayFormat>MHQ-{0000}</displayFormat>
        <label>MHQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MHQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>