force-app/main/default/objects/MHQ__c/fields/accidental_needle_stick__c.field-meta.xml
<CustomField>
    <fullName>accidental_needle_stick__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had any accidental needle stick where you were exposed to someone else’s blood through the needle stick that is known or suspected to have HIV/AIDS, hepatitis B or C?</inlineHelpText>
    <label>22. accidental needle stick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>