force-app/main/default/objects/MHQ__c/fields/active_sti__c.field-meta.xml
<CustomField>
    <fullName>active_sti__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had or been treated for HPV or genital herpes, syphilis, gonorrhea or other sexually transmitted infections? If Yes, Active during the past 12 months?</inlineHelpText>
    <label>14.2 active sti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>