force-app/main/default/objects/MHQ__c/fields/acupuncture__c.field-meta.xml
<CustomField>
    <fullName>acupuncture__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had any acupuncture in which sterile conditions were not used?</inlineHelpText>
    <label>21. acupuncture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>