force-app/main/default/objects/MHQ__c/fields/Africa__c.field-meta.xml
<CustomField>
    <fullName>Africa__c</fullName>
    <inlineHelpText>Since 1977 have you: Ever lived in Africa (including being born) or traveled to Africa?</inlineHelpText>
    <label>34. Africa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>