force-app/main/default/objects/MHQ__c/fields/Africa_city_country_when__c.field-meta.xml
<CustomField>
    <fullName>Africa_city_country_when__c</fullName>
    <description>Ever lived in Africa (including being born) or traveled to Africa? Provide city, country and when (month/year).</description>
    <label>34.1 Africa city country when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>