force-app/main/default/objects/MHQ__c/fields/anemia__c.field-meta.xml
<CustomField>
    <fullName>anemia__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: aplastic anemia, thalassemia, Fanconi anemia, or sickle cell anemia?</inlineHelpText>
    <label>61. anemia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>