force-app/main/default/objects/MHQ__c/fields/another_country__c.field-meta.xml
<CustomField>
    <fullName>another_country__c</fullName>
    <inlineHelpText>In the past 3 years have you: Are you, or have you ever been, an immigrant, refugee, citizen, or resident (lived 5 years or more) of another country?</inlineHelpText>
    <label>30. another country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>