force-app/main/default/objects/MHQ__c/fields/another_country_city_country_when__c.field-meta.xml
<CustomField>
    <fullName>another_country_city_country_when__c</fullName>
    <description>Are you, or have you ever been, an immigrant, refugee, citizen, or resident (lived 5 years or more) of another country? Provide city, country and when (month/year).</description>
    <label>30.1 another country city country when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>