force-app/main/default/objects/MHQ__c/fields/antibiotic__c.field-meta.xml
<CustomField>
    <fullName>antibiotic__c</fullName>
    <inlineHelpText>Are you currently:Taking an antibiotic?</inlineHelpText>
    <label>02. antibiotic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>