force-app/main/default/objects/MHQ__c/fields/blood_disorder__c.field-meta.xml
<CustomField>
    <fullName>blood_disorder__c</fullName>
    <inlineHelpText>Have you EVER: Had a blood disorder or a bleeding problem (coagulation or platelet disorder)?</inlineHelpText>
    <label>48. blood disorder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>