force-app/main/default/objects/MHQ__c/fields/blood_disorder_list_and_when__c.field-meta.xml
<CustomField>
    <fullName>blood_disorder_list_and_when__c</fullName>
    <inlineHelpText>Have you EVER: Had a blood disorder or a bleeding problem (coagulation or platelet disorder)? List disorder and when (month/year).</inlineHelpText>
    <label>48.1 blood disorder list and when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>