force-app/main/default/objects/MHQ__c/fields/blood_from_uk_france_city_country_when__c.field-meta.xml
<CustomField>
    <fullName>blood_from_uk_france_city_country_when__c</fullName>
    <description>Received a transfusion of blood or blood components in the United Kingdom or France? Provide city, country and when (month/year).</description>
    <label>40.1 blood fm uk fr city country when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>