force-app/main/default/objects/MHQ__c/fields/blood_from_uk_or_france__c.field-meta.xml
<CustomField>
    <fullName>blood_from_uk_or_france__c</fullName>
    <inlineHelpText>From 1980 to the present have you: Received a transfusion of blood or blood components in the United Kingdom or France?</inlineHelpText>
    <label>40. blood from uk or france</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>