force-app/main/default/objects/MHQ__c/fields/blood_transfusion__c.field-meta.xml
<CustomField>
    <fullName>blood_transfusion__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had a blood transfusion?</inlineHelpText>
    <label>12. blood transfusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>