force-app/main/default/objects/MHQ__c/fields/blood_transfusion_Africa__c.field-meta.xml
<CustomField>
    <fullName>blood_transfusion_Africa__c</fullName>
    <inlineHelpText>Since 1977 have you: Received a blood transfusion or other medical treatment that involved blood in Africa?</inlineHelpText>
    <label>36. blood transfusion Africa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>