force-app/main/default/objects/MHQ__c/fields/Character_count_temp__c.field-meta.xml
<CustomField>
    <fullName>Character_count_temp__c</fullName>
    <description>Used to identify problem with PDF version of MHQ, which cut off responses. PDF template was fixed 06 May 2021.</description>
    <formula>LEN( outside_US_or_CAN_city_country_when__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Character count temp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>