force-app/main/default/objects/MHQ__c/fields/chemotherapy__c.field-meta.xml
<CustomField>
    <fullName>chemotherapy__c</fullName>
    <inlineHelpText>Have you EVER: Had any chemotherapy during your pregnancy?</inlineHelpText>
    <label>55. chemotherapy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>