force-app/main/default/objects/MHQ__c/fields/chromosomal_disease__c.field-meta.xml
<CustomField>
    <fullName>chromosomal_disease__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: chromosomal disease?</inlineHelpText>
    <label>64. chromosomal disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>