force-app/main/default/objects/MHQ__c/fields/clotting_factor_concentrates__c.field-meta.xml
<CustomField>
    <fullName>clotting_factor_concentrates__c</fullName>
    <inlineHelpText>In the past 3 years have you: Taken clotting factor concentrates for a bleeding problems such as hemophilia?</inlineHelpText>
    <label>33. clotting factor concentrates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>