force-app/main/default/objects/MHQ__c/fields/condition_and_relationship__c.field-meta.xml
<CustomField>
    <fullName>condition_and_relationship__c</fullName>
    <inlineHelpText>mat/pat family: aplastic anemia, thalassemia, Fanconi anemia, sickle cell anemia, CJD, Hurler, GSD, chromosomal disease, CGD, Wiskott-Aldrich, Hunter, SCID, blood/ bleeding and genetic disorders, nervous system disorder, platelet or clotting disorder</inlineHelpText>
    <label>61-70.1 condition and relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>