force-app/main/default/objects/MHQ__c/fields/congenital_or_genetic__c.field-meta.xml
<CustomField>
    <fullName>congenital_or_genetic__c</fullName>
    <inlineHelpText>Have you EVER: Been diagnosed with any congenital or genetic disorder or chromosomal problem?</inlineHelpText>
    <label>59. congenital or genetic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>