force-app/main/default/objects/MHQ__c/fields/contact_with_cjd__c.field-meta.xml
<CustomField>
    <fullName>contact_with_cjd__c</fullName>
    <inlineHelpText>Have you EVER: Had a blood relative or had contact, including intimate contact, with anyone that has been diagnosed with any form of CJD?</inlineHelpText>
    <label>52. contact with cjd</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>