force-app/main/default/objects/MHQ__c/fields/contact_xenotransplantation__c.field-meta.xml
<CustomField>
    <fullName>contact_xenotransplantation__c</fullName>
    <inlineHelpText>Have you EVER: Had intimate contact, including sexual contact, (past or current) with a xenotransplantation product recipient?</inlineHelpText>
    <label>57. contact xenotransplantation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>