force-app/main/default/objects/MHQ__c/fields/creutzfeldt_jakob__c.field-meta.xml
<CustomField>
    <fullName>creutzfeldt_jakob__c</fullName>
    <inlineHelpText>Have you EVER: Been diagnosed with variant Creutzfeldt-Jakob disease (CJD) or any other form of CJD?</inlineHelpText>
    <label>51. creutzfeldt-jakob</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>