force-app/main/default/objects/MHQ__c/fields/creutzfeldt_jakob_disease__c.field-meta.xml
<CustomField>
    <fullName>creutzfeldt_jakob_disease__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: Creutzfeldt-Jakob disease (CJD)?</inlineHelpText>
    <label>62. creutzfeldt-jakob disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>