force-app/main/default/objects/MHQ__c/fields/deferred_blood_donor__c.field-meta.xml
<CustomField>
    <fullName>deferred_blood_donor__c</fullName>
    <inlineHelpText>Have you EVER: Been deferred as a blood donor for a reason other than anemia or being underweight?</inlineHelpText>
    <label>42. deferred blood donor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>