force-app/main/default/objects/MHQ__c/fields/deferred_blood_donor_reason_and_when__c.field-meta.xml
<CustomField>
    <fullName>deferred_blood_donor_reason_and_when__c</fullName>
    <inlineHelpText>Have you EVER: Been deferred as a blood donor for a reason other than anemia or being underweight? If yes, Provide reason and when (month/year).</inlineHelpText>
    <label>42.1 deferred blood donor reason when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>