force-app/main/default/objects/MHQ__c/fields/dementia__c.field-meta.xml
<CustomField>
    <fullName>dementia__c</fullName>
    <inlineHelpText>Have you EVER: Been diagnosed with dementia, any degenerative or demyelinating disorder of the central nervous system, or any other neurological disease where the cause is unknown?</inlineHelpText>
    <label>54. dementia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>