force-app/main/default/objects/MHQ__c/fields/diagnosed_or_tested_positive__c.field-meta.xml
<CustomField>
    <fullName>diagnosed_or_tested_positive__c</fullName>
    <inlineHelpText>Have you EVER: Been deferred as a blood donor for a reason other than anemia or being underweight?</inlineHelpText>
    <label>44. diagnosed or tested positive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>