force-app/main/default/objects/MHQ__c/fields/diagnosed_or_tested_positive_list_when__c.field-meta.xml
<CustomField>
    <fullName>diagnosed_or_tested_positive_list_when__c</fullName>
    <inlineHelpText>Have you EVER: Been diagnosed with or tested positive for human immunodeficiency virus (HIV) or AIDS, human T-cell leukemia virus (HTLV), syphilis, yellow fever, hepatitis A, B, or C? List diagnosis or positive test result and when (month/year).</inlineHelpText>
    <label>44.1 diagnosed tested positive list when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>