force-app/main/default/objects/MHQ__c/fields/drug_alcohol_abuse__c.field-meta.xml
<CustomField>
    <fullName>drug_alcohol_abuse__c</fullName>
    <inlineHelpText>Have you EVER: Had a history of drug or alcohol abuse?</inlineHelpText>
    <label>58. drug alcohol abuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>