force-app/main/default/objects/MHQ__c/fields/drug_alcohol_abuse_type_time__c.field-meta.xml
<CustomField>
    <fullName>drug_alcohol_abuse_type_time__c</fullName>
    <inlineHelpText>Have you EVER: Had a history of drug or alcohol abuse? If Yes: Describe type of abuse and when (month/year)..</inlineHelpText>
    <label>58.1 drug alcohol abuse type time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>