force-app/main/default/objects/MHQ__c/fields/dura_mater__c.field-meta.xml
<CustomField>
    <fullName>dura_mater__c</fullName>
    <inlineHelpText>Have you EVER: Received a dura mater (brain membrane) transplant or graft?</inlineHelpText>
    <label>50. dura mater</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>