force-app/main/default/objects/MHQ__c/fields/ear_or_body_piercing__c.field-meta.xml
<CustomField>
    <fullName>ear_or_body_piercing__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had any ear or body piercing in which sterile procedures were not used?</inlineHelpText>
    <label>19. ear or body piercing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>