force-app/main/default/objects/MHQ__c/fields/Europe__c.field-meta.xml
<CustomField>
    <fullName>Europe__c</fullName>
    <inlineHelpText>From 1980 to the present have you: Spent time that adds up to five (5) years or more in Europe?</inlineHelpText>
    <label>39. Europe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>