force-app/main/default/objects/MHQ__c/fields/Europe_city_country_when__c.field-meta.xml
<CustomField>
    <fullName>Europe_city_country_when__c</fullName>
    <description>Spent time that adds up to five (5) years or more in Europe? Provide city, country and when (month/year).</description>
    <label>39.1 Europe city country when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>