force-app/main/default/objects/MHQ__c/fields/glycogen_storage_disease__c.field-meta.xml
<CustomField>
    <fullName>glycogen_storage_disease__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: Hurler syndrome or other glycogen storage disease (GSD)?</inlineHelpText>
    <label>63. glycogen storage disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>