force-app/main/default/objects/MHQ__c/fields/granulomatosis_disease__c.field-meta.xml
<CustomField>
    <fullName>granulomatosis_disease__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: chronic granulomatosis disease (CGD)?</inlineHelpText>
    <label>65. granulomatosis disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>