force-app/main/default/objects/MHQ__c/fields/hemophilia__c.field-meta.xml
<CustomField>
    <fullName>hemophilia__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had sexual contact with anyone who has hemophilia or has used clotting factor concentrates during the past 5 years?</inlineHelpText>
    <label>17. hemophilia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>