force-app/main/default/objects/MHQ__c/fields/hepatitis_type_2__c.field-meta.xml
<CustomField>
    <fullName>hepatitis_type_2__c</fullName>
    <inlineHelpText>In the past 12 months have you: Lived with, or had close contact, including sexual contact, with a person who has hepatitis? If Yes: Viral or Non-viral</inlineHelpText>
    <label>13.2 hepatitis type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viral</fullName>
            </value>
            <value>
                <fullName>Non-viral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>