force-app/main/default/objects/MHQ__c/fields/hepatitis_type_3__c.field-meta.xml
<CustomField>
    <fullName>hepatitis_type_3__c</fullName>
    <inlineHelpText>In the past 12 months have you: Lived with, or had close contact, including sexual contact, with a person who has hepatitis? If yes: Asymptomatic /  Symptomatic</inlineHelpText>
    <label>13.3 hepatitis type 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asymptomatic</fullName>
            </value>
            <value>
                <fullName>Symptomatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>