force-app/main/default/objects/MHQ__c/fields/hepatitis_type__c.field-meta.xml
<CustomField>
    <fullName>hepatitis_type__c</fullName>
    <inlineHelpText>In the past 12 months have you: Lived with, or had close contact, including sexual contact, with a person who has hepatitis? If Yes: Type A, Type B, Type C</inlineHelpText>
    <label>13.1 hepatitis type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type A</fullName>
            </value>
            <value>
                <fullName>Type B</fullName>
            </value>
            <value>
                <fullName>Type C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>