force-app/main/default/objects/MHQ__c/fields/Hunter_syndrome__c.field-meta.xml
<CustomField>
    <fullName>Hunter_syndrome__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: Hunter syndrome?</inlineHelpText>
    <label>67. Hunter syndrome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>