force-app/main/default/objects/MHQ__c/fields/immunodeficiency__c.field-meta.xml
<CustomField>
    <fullName>immunodeficiency__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: severe combined immunodeficiency (SCID) or blood/ bleeding and genetic disorders?</inlineHelpText>
    <label>68. immunodeficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>