force-app/main/default/objects/MHQ__c/fields/infectious_skin_disease__c.field-meta.xml
<CustomField>
    <fullName>infectious_skin_disease__c</fullName>
    <inlineHelpText>Have you EVER: Had or been exposed to an infectious skin disease such as herpes?</inlineHelpText>
    <label>47. infectious skin disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>