force-app/main/default/objects/MHQ__c/fields/infectious_skin_disease_active__c.field-meta.xml
<CustomField>
    <fullName>infectious_skin_disease_active__c</fullName>
    <inlineHelpText>Have you EVER: Had or been exposed to an infectious skin disease such as herpes? Is the infection active?</inlineHelpText>
    <label>47.1 infectious skin disease active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>