force-app/main/default/objects/MHQ__c/fields/jaundice__c.field-meta.xml
<CustomField>
    <fullName>jaundice__c</fullName>
    <inlineHelpText>In the past 12 months have you:  Had any exposure to jaundice (not infant jaundice), HIV or hepatitis?</inlineHelpText>
    <label>23. jaundice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>