force-app/main/default/objects/MHQ__c/fields/juvenile_detention__c.field-meta.xml
<CustomField>
    <fullName>juvenile_detention__c</fullName>
    <inlineHelpText>In the past 12 months have you: Been incarcerated in a juvenile detention, lockup, jail or prison for longer than 72 consecutive hours?</inlineHelpText>
    <label>26. juvenile detention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>