force-app/main/default/objects/MHQ__c/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>MHQs</relationshipLabel>
    <relationshipName>MHQs</relationshipName>
    <type>Lookup</type>
</CustomField>