force-app/main/default/objects/MHQ__c/fields/leukemia_or_paraparesis__c.field-meta.xml
<CustomField>
    <fullName>leukemia_or_paraparesis__c</fullName>
    <inlineHelpText>Have you EVER: Had adult T-cell leukemia or unexplained paraparesis (partial paralysis of the limbs)?</inlineHelpText>
    <label>45. leukemia or paraparesis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>