force-app/main/default/objects/MHQ__c/fields/List_African_country__c.field-meta.xml
<CustomField>
    <fullName>List_African_country__c</fullName>
    <inlineHelpText>Since 1977 have you: Had sex with anyone who was born in or lived in Africa since 1977? If yes, List the African country.</inlineHelpText>
    <label>35.1 List African country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>