force-app/main/default/objects/MHQ__c/fields/list_antibiotic__c.field-meta.xml
<CustomField>
    <fullName>list_antibiotic__c</fullName>
    <inlineHelpText>Are you currently: Taking an antibiotic? If Yes: List antibiotic and reason for use:</inlineHelpText>
    <label>02.1 list antibiotic</label>
    <type>TextArea</type>
</CustomField>