force-app/main/default/objects/MHQ__c/fields/list_medication__c.field-meta.xml
<CustomField>
    <fullName>list_medication__c</fullName>
    <inlineHelpText>Are you currently: On any medications? If Yes: List medication and reason for use:</inlineHelpText>
    <label>01.1 list medication</label>
    <type>TextArea</type>
</CustomField>