force-app/main/default/objects/MHQ__c/fields/list_shots_or_vaccines__c.field-meta.xml
<CustomField>
    <fullName>list_shots_or_vaccines__c</fullName>
    <inlineHelpText>In the past 12 weeks have you: Had any shots or vaccines? If Yes: List shots or vaccines:</inlineHelpText>
    <label>03.1 list shots or vaccines</label>
    <type>TextArea</type>
</CustomField>