force-app/main/default/objects/MHQ__c/fields/list_which_medications__c.field-meta.xml
<CustomField>
    <fullName>list_which_medications__c</fullName>
    <inlineHelpText>In the past 12 months have you: Taken any of the following medications: Accutane, Soriatane, Tegison (retinoids) or Propecia (finasteride)? If yes, List which medication.</inlineHelpText>
    <label>28.1 list which medications</label>
    <type>TextArea</type>
</CustomField>