force-app/main/default/objects/MHQ__c/fields/live_cells__c.field-meta.xml
<CustomField>
    <fullName>live_cells__c</fullName>
    <inlineHelpText>Have you EVER: Had or have currently a member of your household that has ever had a transplant or other medical procedure that involved being exposed to live cells, tissues, or organs from an animal?</inlineHelpText>
    <label>60. live cells</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>