force-app/main/default/objects/MHQ__c/fields/malaria__c.field-meta.xml
<CustomField>
    <fullName>malaria__c</fullName>
    <inlineHelpText>Have you EVER: Had Malaria?</inlineHelpText>
    <label>49. malaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>