force-app/main/default/objects/MHQ__c/fields/malaria_asymptomatic__c.field-meta.xml
<CustomField>
    <fullName>malaria_asymptomatic__c</fullName>
    <inlineHelpText>Have you EVER: Had Malaria? Have you been asymptomatic for more than 3 years?</inlineHelpText>
    <label>49.1 malaria asymptomatic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>