force-app/main/default/objects/MHQ__c/fields/male_diagnosis_ZIKV__c.field-meta.xml
<CustomField>
    <fullName>male_diagnosis_ZIKV__c</fullName>
    <inlineHelpText>During this pregnancy have you: Had sex with a male who is known to have had a medical diagnosis of ZIKV in the 6 months prior to the sexual contact?</inlineHelpText>
    <label>07. male diagnosis ZIKV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>