force-app/main/default/objects/MHQ__c/fields/male_resides_ZIKV__c.field-meta.xml
<CustomField>
    <fullName>male_resides_ZIKV__c</fullName>
    <inlineHelpText>During this pregnancy have you: Had sex with a male who resided in, or traveled to, an area with active ZIKV transmission in the 6 months prior to the sexual contact?</inlineHelpText>
    <label>08. male resides ZIKV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>