force-app/main/default/objects/MHQ__c/fields/male_resides_ZIKV_country_when__c.field-meta.xml
<CustomField>
    <fullName>male_resides_ZIKV_country_when__c</fullName>
    <description>Had sex with a male who resided in, or traveled to, an area with active ZIKV transmission in the 6 months prior to the sexual contact? Provide country and when (month/year).</description>
    <label>08.1 male resides ZIKV country when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>