force-app/main/default/objects/MHQ__c/fields/medications__c.field-meta.xml
<CustomField>
    <fullName>medications__c</fullName>
    <inlineHelpText>Are you currently: On any medications?</inlineHelpText>
    <label>01 medications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>