force-app/main/default/objects/MHQ__c/fields/MHQ_Recipient__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the contact for the MHQ Recipient.</description>
    <inlineHelpText>This is a lookup to the contact for the MHQ Recipient.</inlineHelpText>
    <label>MHQ Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MHQs</relationshipLabel>
    <relationshipName>MHQs</relationshipName>
    <type>Lookup</type>
</CustomField>