force-app/main/default/objects/MHQ__c/fields/military_base__c.field-meta.xml
<CustomField>
    <fullName>military_base__c</fullName>
    <inlineHelpText>From 1980 to 1996 have you: Been a current or former member of the U.S. military or a civilian military employee, or a dependent of a U.S. military member or civilian employee who resided at a military base in Europe for 6 months or more?</inlineHelpText>
    <label>38. military base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>