force-app/main/default/objects/MHQ__c/fields/military_base_city_country_base_when__c.field-meta.xml
<CustomField>
    <fullName>military_base_city_country_base_when__c</fullName>
    <description>Been a current or former member of the U.S. military or a civilian military employee, or a dependent of a U.S. military member or civilian employee who resided at a military base in Europe for 6 months or more? Provide city, country, military base and when (month/year).</description>
    <label>38.1 militarybase city country base when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>