force-app/main/default/objects/MHQ__c/fields/nervous_system_disorder__c.field-meta.xml
<CustomField>
    <fullName>nervous_system_disorder__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: nervous system disorder?</inlineHelpText>
    <label>69. nervous system disorder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>