force-app/main/default/objects/MHQ__c/fields/outside_US_or_CAN__c.field-meta.xml
<CustomField>
    <fullName>outside_US_or_CAN__c</fullName>
    <inlineHelpText>In the past 3 years:  Have you been outside the United States or Canada?</inlineHelpText>
    <label>29. outside US or CAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>