force-app/main/default/objects/MHQ__c/fields/outside_US_or_CAN_city_country_when__c.field-meta.xml
<CustomField>
    <fullName>outside_US_or_CAN_city_country_when__c</fullName>
    <description>Have you been outside the United States or Canada? Provide city, country and when (month/year).</description>
    <label>29.1 outside US or CAN city country when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>