force-app/main/default/objects/MHQ__c/fields/person_with_hepatitis__c.field-meta.xml
<CustomField>
    <fullName>person_with_hepatitis__c</fullName>
    <inlineHelpText>In the past 12 months have you: Lived with, or had close contact, including sexual contact, with a person who has hepatitis?</inlineHelpText>
    <label>13. person with hepatitis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>