force-app/main/default/objects/MHQ__c/fields/piercing_performed__c.field-meta.xml
<CustomField>
    <fullName>piercing_performed__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had any ear or body piercing in which sterile procedures were not used? If yes, was piercing performed using single-use equipment / sterilized equipment?</inlineHelpText>
    <label>19.1 piercing performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>