force-app/main/default/objects/MHQ__c/fields/platelet_clotting_disorder__c.field-meta.xml
<CustomField>
    <fullName>platelet_clotting_disorder__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: platelet or clotting disorder?</inlineHelpText>
    <label>70. platelet clotting disorder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>