force-app/main/default/objects/MHQ__c/fields/rabies__c.field-meta.xml
<CustomField>
    <fullName>rabies__c</fullName>
    <inlineHelpText>In the past 12 months have you: Been treated for rabies?</inlineHelpText>
    <label>27. rabies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>